--- a/orderdrink.css
+++ b/orderdrink.css
@@ -52,7 +52,9 @@
     width: 90%;
 }
 
-.minus {
+.minus,
+.minus:hover,
+.minus:focus {
     background-color: rgba(255, 255, 255, 0.3);
     display: table-cell;
     vertical-align: middle;
