--- a/orderdrink.css
+++ b/orderdrink.css
@@ -42,7 +42,7 @@
     background-color: #965A3E;
     border-color: #965A3E;
     font-family: "STRATEGYCIDE", Arial, Helvetica, sans-serif;
-    font-size: 70px;
+    font-size: 50px;
     color: white;
     line-height: 1;
     height: 200px;
@@ -81,7 +81,7 @@
 
 .item {
     font-family: "STRATEGYCIDE", Arial, Helvetica, sans-serif;
-    font-size: 100px;
+    font-size: 60px;
     background-color: #C28B64;
     color: white;
     padding: 10px 25px;
@@ -89,9 +89,9 @@
 
 .item-count {
     font-family: "STRATEGYCIDE", Arial, Helvetica, sans-serif;
-    font-size: 100px;
+    font-size: 60px;
     color: #ddd;
-    float: right;
+    text-align: right;
 }
 
 .cell {
@@ -104,4 +104,43 @@
     align-content: center;
     flex-direction: column;
     justify-content: center;
+}
+
+.cold,
+.cold:hover,
+.cold:focus {
+    background-color: #618FCA;
+    border-color: #618FCA;
+}
+.hot,
+.hot:hover,
+.hot:focus {
+    background-color: #B61E23;
+    border-color: #B61E23;
+}
+.misc,
+.misc:hover,
+.misc:focus {
+    background-color: #965A3E;
+    border-color: #965A3E;
+}
+
+.legend {
+    margin: 10px 20px;
+    font-family: "STRATEGYCIDE", Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 50px;
+}
+
+.close-legend {
+    float: right;
+    width: 0;
+    height: 0;
+    overflow: visible;
+    position: relative;
+}
+
+.close-legend-btn {
+    position: absolute;
+    right: 5px;
 }
